# explore

./: .gitignore  README.md  pyproject.toml  test.py  training.py
model/: patch-classifier-parameters.pt
scripts/: training.py
src/: dataset.py  process.py  utils.py
src/data/: dataset.py
