[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["Sergio Picascia <sergiopicascia@libero.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.0"
transformers = "^4.37.2"
opencv-python = "^4.9.0.80"
shapely = "^2.0.2"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
